environments/dev/kubernetes/cert-manager/exampleapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: example-app
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: example-service
            port: 
              number: 80
